--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,12 +6,12 @@
 
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-list>
+    <ion-item *ngFor="let item of contactList" >
+      <ion-avatar item-start>
+        <img src="{{item.id}}" >
+      </ion-avatar>
+      <h2>{{item.displayName}}</h2>
+    </ion-item>
+  </ion-list>
 </ion-content>
