--- a/src/pages/contact-detail/contact-detail.html
+++ b/src/pages/contact-detail/contact-detail.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item>
       <ion-avatar item-start>
-        <img src="{{selectedItem.displayName}}">
+        <img src="../../assets/bg/bg.jpg">
       </ion-avatar>
       <h2>{{selectedItem.displayName}}</h2>
       <p>{{selectedItem.nickname}}</p>
