--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding style="background: white url(../../assets/bg/bg.jpg) repeat-y center top">
   <h2>Welcome to Ionic!</h2>
   <ion-list>
     <ion-item *ngFor="let item of contactList" (click)="showDetail($event,item)">
